--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap">
     <title>Home Page</title>
 </head>
+
 <body>
     <nav class="header">
         <div class="logo-item">
@@ -26,5 +30,79 @@
             <button>Book Trial</button>
         </div>
     </nav>
+    <div class="production-message">
+        <h1>Photographer's Blog</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates amet labore laboriosam.</p>
+    </div>
+    <div class="image-container">
+        <div class="images"><img
+                src="https://media.istockphoto.com/photos/vortex-split-view-of-blue-ocean-waters-surface-picture-id1368265555?b=1&k=20&m=1368265555&s=170667a&w=0&h=chLxvXDerXyUyZtT_JOb485pvvDwN3WB5IatmXEPoUU="
+                alt="Image1" srcset="">
+            <div class="icon"><img src="—Pngtree—black digital home camera_8231555.png" alt=""></div>
+        </div>
+        <div class="images"><img
+                src="https://media.istockphoto.com/photos/lake-in-the-shape-of-the-worlds-continents-in-the-middle-of-untouched-picture-id1342229191?b=1&k=20&m=1342229191&s=170667a&w=0&h=swcdZlnGAdTuLsuYgPgVmpEVmFmKpgrSCnqWsc5l6vI="
+                alt="">
+            <div class="icon"><img src="—Pngtree—black digital home camera_8231555.png" alt=""></div>
+        </div>
+        <div class="images"><img
+                src="https://media.istockphoto.com/photos/high-angle-view-of-a-lake-and-forest-picture-id1337232523?b=1&k=20&m=1337232523&s=170667a&w=0&h=ueU7jzT1l-Qs_i4HwtBHO00RLGwgnlzRRKcja79EOgo="
+                alt="">
+            <div class="icon"><img src="—Pngtree—black digital home camera_8231555.png" alt=""></div>
+        </div>
+        <div class="images"><img
+                src="https://media.istockphoto.com/photos/beautiful-meadow-field-with-fresh-grass-and-yellow-dandelion-flowers-picture-id1301592082?b=1&k=20&m=1301592082&s=170667a&w=0&h=i3f9oPDdUoEQ9FE-vD2VQyQ9T-v2ODr-VIKrGDu3Tfw="
+                alt="">
+            <div class="icon"><img src="—Pngtree—black digital home camera_8231555.png" alt=""></div>
+        </div>
+        <div class="images"><img
+                src="https://media.istockphoto.com/photos/morning-fog-over-a-beautiful-lake-surrounded-by-pine-forest-stock-picture-id1306075353?b=1&k=20&m=1306075353&s=170667a&w=0&h=kBJLk7mFIGCMCaczJ6A35NL7AWffc6wmGHtPdYFHfY0="
+                alt="">
+            <div class="icon"><img src="—Pngtree—black digital home camera_8231555.png" alt=""></div>
+        </div>
+        <div class="images"><img
+                src="https://media.istockphoto.com/photos/lupin-field-under-romantic-sunset-clouds-on-iceland-with-snow-capped-picture-id1302862725?b=1&k=20&m=1302862725&s=170667a&w=0&h=ia5b_fTCRYao31YbQ56_e22DuLmBFPqQhTUYeD71zH8="
+                alt="">
+            <div class="icon"><img src="—Pngtree—black digital home camera_8231555.png" alt=""></div>
+        </div>
+    </div>
+
+    <div class="banner">
+        <h3>Start Your Journey</h3>
+        <h1>Let's Capture This World</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, voluptates obcaecati, officiis minus debitis
+            illum, sapiente possimus perspiciatis dignissimos velit quo molestiae ullam porro harum.</p>
+
+        <button>Book Trial</button>
+    </div>
+
+    <footer class="footer">
+        <div class="photography-message">
+            <h1>Photography</h1>
+            <div class="para"><p>Lorem ipsum dolor sit</p>
+            <p>amet consectetur adipisicing elit</p>
+            </div>
+            <div class="social-icon">
+                <div class="icons"><i class="fa-brands fa-instagram fa-2x"></i></div>
+                <div class="icons"><i class="fa-brands fa-facebook fa-2x"></i></div>
+                <div class="icons"><i class="fa-brands fa-twitter fa-2x"></i></div>
+                <div class="icons"><i class="fa-brands fa-linkedin fa-2x"></i></div>
+            </div>
+        </div>
+        <div class="contact-info">
+            <h1>Contact Info</h1>
+            <h4>+91-6787648754</h4>
+            <h4>+91-6787648754</h4>
+            <h4>abcdef@gmail.com</h4>
+            <h4>7:00-23:00</h4>
+        </div>
+        <div class="newsletter">
+            <h2>Newsletter</h2>
+            <h4>Subscribe for latest updates</h4>
+            <input type="email" name="" id="" placeholder="Enter your email" checked>
+            <button>Subscribe</button>
+        </div>
+    </footer>
 </body>
+
 </html>
