--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="header">
         <div class="logo-item">
-            <img src="rm234-binn-11b.jpg" alt="">
+            <img src="—Pngtree—hand-painted watercolor green camera hand_4263235.png" alt="">
             <h1>IMAGE</h1>
         </div>
         <div class="menu">
